Ingress/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: startup-django
  labels:
    app: mysite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysite
  template:
    metadata:
      labels:
        app: mysite
    spec:
      containers:
        - name: startup-djangoapp
          image: sanyam12/startup-djangoapp
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: my-services
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 31257
